translation for header & sidebar (en, fr)

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -42,12 +42,15 @@ en:
     common-label-save: 'Save'
     common-label-delete-warning: 'will be deleted. This action is irreversible'
 
-    KEY: Text
+    KEY: 'Text'
     search.placeholder: 'Search clients or leads'
-    avatar.balance: Balance
+    avatar.balance: 'Balance'
     avatar.account.settings: 'Account Settings'
-    avatar.tasks: Tasks
+    avatar.tasks: 'Tasks'
     avatar.give.feedback: 'Give feedback'
+    avatar.give.feedback.giveus: 'Give us feedback'
+    avatar.give.feedback.helpus: 'Help us improve Pabau'
+    avatar.give.feedback.somethingwrong: 'Something went wrong'
     avatar.help.support: 'Help & Support'
     avatar.help.support.header: 'Help & Support'
     avatar.help.support.centre: 'Help Centre'
@@ -56,34 +59,67 @@ en:
     avatar.select.language: 'Select language'
     avatar.change.company: 'Select company'
     avatar.logout: 'Log out'
+
     search.client.label: Clients
     search.lead.label: Leads
     search.result.one: 'Top Result'
     search.result.two: 'All Results'
     search.new.client: 'Add new client'
     search.advanced.search: 'Advanced search'
-    notifications.header: Notifications
-    notifications.tab.activity: Activity
-    notifications.tab.news: News
-    notifications.today: Today
-    notifications.yesterday: Yesterday
-    notifications.report: Report
-    notifications.appointment: "Appointment\n"
-    notifications.lead: Leads
+    search.advanced.search.firstname.label: 'First name'
+    search.advanced.search.firstname.placeholder: 'First name'
+    search.advanced.search.email.label: 'Email'
+    search.advanced.search.email.placeholder: 'Email'
+    search.advanced.search.birthdate.label: 'Date of birth'
+    search.advanced.search.birthdate.placeholder: 'DD/MM//YYY'
+    search.advanced.search.phone.label: 'Phone'
+    search.advanced.search.phone.placeholder: 'Phone'
+    search.advanced.search.mobile.label: 'Mobile'
+    search.advanced.search.mobile.placeholder: 'Mobile'
+    search.advanced.search.postcode.label: 'Post code'
+    search.advanced.search.postcode.placeholder: 'Post code'
+    search.advanced.search.policynumber.label: 'Policy number'
+    search.advanced.search.policynumber.placeholder: 'Policy number'
+    search.advanced.search.patientid.label: 'Patient ID'
+    search.advanced.search.patientid.placeholder: 'Patient ID'
+    search.advanced.search.invoiceno.label: 'Invoice NO'
+    search.advanced.search.invoiceno.placeholder: 'Invoice NO'
+    search.advanced.search.inactiveclients.label: 'Show inactive clients'
+    search.advanced.search.search: 'Search'
+    search.basic.search: 'Back to basic search'
+
+    notifications.header: 'Notifications'
+    notifications.tab.activity: 'Activity'
+    notifications.tab.news: 'News'
+    notifications.today: 'Today'
+    notifications.yesterday: 'Yesterday'
+    notifications.report: 'Report'
+    notifications.appointment: 'Appointment'
+    notifications.review: 'Review'
+    notifications.smscampaign: 'SMS Campaign'
+    notifications.newslettercampaign: 'Newsletter Campaign'
+    notifications.holidayrequest: 'Holiday Request'
+    notifications.businessrefer: 'Business Refer'
+    notifications.lead: 'Lead'
     notifications.empty.msg: 'No notifications yet'
     notifications.empty.hint: 'Stay tuned! Notifications about your activity will show up here.'
     notifications.empty.anchor: 'Notification settings'
     news.learn: 'Learn more'
-    marketingsource-input-search: Search
+    marketingsource-input-search: 'Search'
     james-testing-1: 'test one'
     james-testing-2: 'test two'
     james-test-3: 'Hello World!=)'
     login.title: 'Log In!!'
+
     quickcreate.client: 'Client'
     quickcreate.lead: 'Lead'
     quickcreate.sms: 'SMS'
     quickcreate.sale: 'Sale'
     quickcreate.newsletter: 'Newsletter'
+
+    chat.header: 'Chat'
+    chat.channel: 'Channel'
+    chat.chats: 'Chats'
     chat.members.in: ' Members In #'
     chat.cancel: 'Cancel'
     chat.create: 'Create'
@@ -95,11 +131,46 @@ en:
     chat.create.channel.description.placeholder: 'What’s this channel about?'
     chat.create.channel.makeprivate: 'Make private'
     chat.create.channel.makeprivate.text: 'When a channel is set to private, it can be only be viewed or joined by invitation.'
+
     message.managingdirector: 'Managing Director'
     message.newmessage: 'New message'
     message.select.placeholder: 'Type the name of a channel or people'
     message.empty.msg: 'No messages here yet'
     message.input.placeholder: 'Message'
+
     addgroup.add: 'Add People'
     addgroup.remove: 'Remove'
     addgroup.input.placeholder: 'Search members'
+
+    sidebar.mobile.profile: 'Profile'
+    sidebar.mobile.menu: 'Menu'
+    sidebar.mobile.notifications: 'Notifications'
+    sidebar.mobile.chat: 'Chat'
+    sidebar.dashboard: 'Dashboard'
+    sidebar.calendar: 'Calendar'
+    sidebar.team: 'Team'
+    sidebar.team.staffmanager: 'Staff Manager'
+    sidebar.team.targets: 'Targets'
+    sidebar.team.schedule: 'Schedule'
+    sidebar.team.hiring: 'Hiring'
+    sidebar.team.commissions: 'Commissions'
+    sidebar.leads: 'Leads'
+    sidebar.reports: 'Reports'
+    sidebar.stock: 'Stock'
+    sidebar.stock.products: 'Products'
+    sidebar.stock.inventorycount: 'Inventory Count'
+    sidebar.stock.purchaseorder: 'Purchase Order'
+    sidebar.stock.suppliers: 'Suppliers'
+    sidebar.marketing: 'Marketing'
+    sidebar.marketing.campaigns: 'Campaigns'
+    sidebar.marketing.reivews: 'Reviews'
+    sidebar.marketing.giftvouchers: 'Gift Vouchers'
+    sidebar.marketing.referraltracker: 'Referral tracker'
+    sidebar.marketing.loyalty: 'Loyalty'
+    sidebar.marketing.fanancials: 'Financials'
+    sidebar.financials.accounts: 'Accounts'
+    sidebar.financials.cashup: 'Cashup'
+    sidebar.contacts: 'Contacts'
+    sidebar.contacts.clients: 'Clients'
+    sidebar.contacts.casemanager: 'Case Manager'
+    sidebar.setup: 'Setup'
