--- a/libs/i18n/locales/fr.yml
+++ b/libs/i18n/locales/fr.yml
@@ -1,67 +1,164 @@
 fr:
-    marketingsource-header-create.translation: 'Créer une source marketing'
-    marketingsource-title: 'Créer une source marketing!'
+    marketingsource-header-create.translation: 'Créer une source'
+    marketingsource-title: 'Sources de marketing'
     marketingsource-name-textfield: 'Nom'
-    marketingsource-name-placeholder: 'par exemple. Facebook'
-    marketingsource-header-edit: 'Mettre à jour cette source marketing'
+    marketingsource-status-field: 'Statut'
+    marketingsource-name-placeholder: 'Facebook'
+    marketingsource-header-edit: 'Modifier la source marketing'
+    marketingsource-header-create: 'Créer une source marketing'
+    marketingsource-header-delete: 'Supprimer la source marketing'
+    marketingsource-delete-button-label: 'Oui, supprimer la source'
+    marketingsource-notification-delete-success: 'Source marketing supprimée'
+    marketingsource-notification-delete-error: 'Lors de la suppression des sources marketing'
+    marketingsource-notification-update-success: 'Source de commercialisation mise à jour'
+    marketingsource-notification-update-error: 'Lors de la mise à jour de la source de marketing'
+    marketingsource-status-label: 'Actif'
+    marketingsource-create-button: 'Créer'
+    marketingsource-save-button: 'Sauvegarder'
+    marketingsource-delete-button: 'Effacer'
+    basic-crud-table-header-breadcrumb-setup-link: 'Installer'
     basic-crud-table-input-search-placeholder: 'Chercher'
-    basic-crud-table-button-filter: 'Filtres'
+    basic-crud-table-button-filter: 'Filtre'
     basic-crud-table-button-active: 'Actif'
     basic-crud-table-button-inactive: 'Inactif'
+    basic-crud-table-text-status: 'Statut'
     crud-table-pagination-text-showing: 'Montrant'
-    crud-table-pagination-text-results: 'Résultats de'
+    crud-table-pagination-text-results: 'résultats de'
     crud-table-pagination-test-displaying: 'Lignes par page'
-
-    navigation-breadcrumb-setup: 'Installer'
-
+    add-button-filter: 'Filtre'
     add-button-filter-header-text-filter: 'Filtrer par'
-    add-button-filter-header-text-status: 'Statut'
-    add-button-filter: 'Filtrer'
     add-button-filter-reset: 'Réinitialiser'
     add-button-filter-cancel: 'Annuler'
-
+    add-button-filter-header-text-status: 'Statut'
+    navigation-breadcrumb-setup: 'Installer'
     common-label-delete: 'Effacer'
     common-label-add: 'Ajouter'
     common-label-create: 'Créer'
+    common-label-cancel: 'Annuler'
     common-label-save: 'Sauvegarder'
-    common-label-delete-warning: 'sera supprimé. Cette action est irréversible'
-
-    KEY: ''
-    search.placeholder: ''
-    avatar.balance: ''
-    avatar.account.settings: ''
-    avatar.tasks: ''
-    avatar.give.feedback: ''
-    avatar.help.support: ''
-    avatar.help.support.header: ''
-    avatar.help.support.centre: ''
-    avatar.help.video.guides: ''
-    avatar.help.contact.support: ''
-    avatar.select.language: ''
-    avatar.change.company: ''
-    avatar.logout: ''
-    search.client.label: ''
-    search.lead.label: ''
-    search.result.one: ''
-    search.result.two: ''
-    search.new.client: ''
-    search.advanced.search: ''
-    notifications.header: ''
-    notifications.tab.activity: ''
-    notifications.tab.news: ''
-    notifications.today: ''
-    notifications.yesterday: ''
-    notifications.report: ''
-    notifications.appointment: ''
-    notifications.lead: ''
-    news.learn: ''
-    marketingsource-input-search: ''
-    james-testing-1: ''
-    james-testing-2: ''
-    james-test-3: ''
-    login.title: ''
+    common-label-delete-warning: 'sera supprimé. Cette action est irréversible '
+    KEY: 'Texte'
+    search.placeholder: 'Rechercher des clients ou des prospects'
+    avatar.balance: 'Équilibre'
+    avatar.account.settings: 'Paramètres du compte'
+    avatar.tasks: 'Tâches'
+    avatar.give.feedback: 'Donnez votre avis'
+    avatar.give.feedback.giveus: 'Donnez-nous vos commentaires'
+    avatar.give.feedback.helpus: 'Aidez-nous à améliorer Pabau'
+    avatar.give.feedback.somethingwrong: 'Un problème est survenu'
+    avatar.help.support: 'Support d`aide'
+    avatar.help.support.header: 'Support d`aide'
+    avatar.help.support.centre: 'Centre d`aide'
+    avatar.help.video.guides: 'Guides vidéo'
+    avatar.help.contact.support: 'Contactez le support'
+    avatar.select.language: 'Choisir la langue'
+    avatar.change.company: 'Sélectionnez une entreprise'
+    avatar.logout: 'Se déconnecter'
+    search.client.label: 'Clients'
+    search.lead.label: 'Pistes'
+    search.result.one: 'Meilleur résultat'
+    search.result.two: 'Tous les résultats'
+    search.new.client: 'Ajouter un nouveau client'
+    search.advanced.search: 'Recherche Avancée'
+    search.advanced.search.firstname.label: 'Prénom'
+    search.advanced.search.firstname.placeholder: 'Prénom'
+    search.advanced.search.email.label: 'E-mail'
+    search.advanced.search.email.placeholder: 'E-mail'
+    search.advanced.search.birthdate.label: 'Date de naissance'
+    search.advanced.search.birthdate.placeholder: 'JJ / MM // AAA'
+    search.advanced.search.phone.label: 'Téléphone'
+    search.advanced.search.phone.placeholder: 'Téléphone'
+    search.advanced.search.mobile.label: 'Mobile'
+    search.advanced.search.mobile.placeholder: 'Mobile'
+    search.advanced.search.postcode.label: 'Code postal'
+    search.advanced.search.postcode.placeholder: 'Code postal'
+    search.advanced.search.policynumber.label: 'Numéro de police'
+    search.advanced.search.policynumber.placeholder: 'Numéro de police'
+    search.advanced.search.patientid.label: 'ID du patient'
+    search.advanced.search.patientid.placeholder: 'ID du patient'
+    search.advanced.search.invoiceno.label: 'Facture NON'
+    search.advanced.search.invoiceno.placeholder: 'Facture NON'
+    search.advanced.search.inactiveclients.label: 'Afficher les clients inactifs'
+    search.advanced.search.search: 'Chercher'
+    search.basic.search: 'Retour à la recherche de base'
+    notifications.header: 'Notifications'
+    notifications.tab.activity: 'Activité'
+    notifications.tab.news: 'Nouvelles'
+    notifications.today: 'Aujourd`hui'
+    notifications.yesterday: 'Hier'
+    notifications.report: 'Signaler'
+    notifications.appointment: 'Rendez-vous'
+    notifications.review: 'La revue'
+    notifications.smscampaign: 'Campagne SMS'
+    notifications.newslettercampaign: 'Campagne de newsletter'
+    notifications.holidayrequest: 'Demande de congé'
+    notifications.businessrefer: 'Entreprise de référence'
+    notifications.lead: 'Mener'
+    notifications.empty.msg: 'Pas encore de notifications'
+    notifications.empty.hint: 'Restez à l`écoute! Les notifications concernant votre activité s`afficheront ici. '
+    notifications.empty.anchor: 'Paramètres de notification'
+    news.learn: 'Apprendre encore plus'
+    marketingsource-input-search: 'Chercher'
+    james-testing-1: 'tester un'
+    james-testing-2: 'test deux'
+    james-test-3: 'Bonjour le monde! =)'
+    login.title: 'Connexion!!'
     quickcreate.client: 'Client'
     quickcreate.lead: 'Mener'
     quickcreate.sms: 'SMS'
     quickcreate.sale: 'Vente'
     quickcreate.newsletter: 'Bulletin'
+    chat.header: 'Discuter'
+    chat.members.in: 'Membres dans #'
+    chat.channel: 'Canaliser'
+    chat.chats: 'Chats'
+    chat.cancel: 'Annuler'
+    chat.create: 'Créer'
+    chat.create.channel: 'Créer une chaîne'
+    chat.create.channel.title: 'Les canaux sont l`endroit où votre équipe communique. Ils sont mieux organisés autour d`un sujet - marketing, par exemple. '
+    chat.create.channel.name: 'Nom'
+    chat.create.channel.name.placeholder: '# par exemple. plan-budget '
+    chat.create.channel.description: 'Description'
+    chat.create.channel.description.placeholder: 'De quoi parle cette chaîne?'
+    chat.create.channel.makeprivate: 'Rendre privé'
+    chat.create.channel.makeprivate.text: 'Lorsqu`une chaîne est définie comme privée, elle ne peut être vue ou rejointe que sur invitation.'
+    message.managingdirector: 'Directeur général'
+    message.newmessage: 'Nouveau message'
+    message.select.placeholder: 'Tapez le nom d`une chaîne ou d`une personne'
+    message.empty.msg: 'Pas encore de messages ici'
+    message.input.placeholder: 'Un message'
+    addgroup.add: 'Ajouter des personnes'
+    addgroup.remove: 'Supprimer'
+    addgroup.input.placeholder: 'Rechercher des membres'
+    sidebar.mobile.profile: 'Profil'
+    sidebar.mobile.menu: 'Menu'
+    sidebar.mobile.notifications: 'Notifications'
+    sidebar.mobile.chat: 'Discuter'
+    sidebar.dashboard: 'Tableau de bord'
+    sidebar.calendar: 'Calendrier'
+    sidebar.team: 'Équipe'
+    sidebar.team.staffmanager: 'Directeur du personnel'
+    sidebar.team.targets: 'Cibles'
+    sidebar.team.schedule: 'Horaire'
+    sidebar.team.hiring: 'Embauche'
+    sidebar.team.commissions: 'Commissions'
+    sidebar.leads: 'Pistes'
+    sidebar.reports: 'Rapports'
+    sidebar.stock: 'Stocker'
+    sidebar.stock.products: 'Des produits'
+    sidebar.stock.inventorycount: 'L`inventaire'
+    sidebar.stock.purchaseorder: 'Bon de commande'
+    sidebar.stock.suppliers: 'Fournisseurs'
+    sidebar.marketing: 'Commercialisation'
+    sidebar.marketing.campaigns: 'Campagnes'
+    sidebar.marketing.reivews: 'Commentaires'
+    sidebar.marketing.giftvouchers: 'Chèques cadeaux'
+    sidebar.marketing.referraltracker: 'Suivi des références'
+    sidebar.marketing.loyalty: 'Fidélité'
+    sidebar.marketing.fanancials: 'Finances'
+    sidebar.financials.accounts: 'Comptes'
+    sidebar.financials.cashup: 'Cashup'
+    sidebar.contacts: 'Contacts'
+    sidebar.contacts.clients: 'Clients'
+    sidebar.contacts.casemanager: 'Chargé de dossiers'
+    sidebar.setup: 'Installer'
