Update keys for NoResults, Dashboard, Modal

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -1,9 +1,15 @@
 en:
   marketingsource-header-create.translation: 'Create Source'
   marketingsource-title: 'Marketing Sources'
-  marketingsource-name-textfield: 'Name'
+  marketingsource-title-short: 'Source'
   marketingsource-status-field: 'Status'
-  marketingsource-name-placeholder: 'Facebook'
+  marketingsource-name: 'Name'
+  marketingsource-name-lower: 'name'
+  marketingsource-name-placeholder: 'eg. Facebook'
+  marketingsource-name-tooltip: 'A friendly name for this name, eg. Facebook'
+  marketingsource-name-description: 'A friendly name'
+  marketingsource-name-full: 'Friendly Name'
+  marketingsource-name-full-lower: 'friendly name'
   marketingsource-header-edit: 'Edit Marketing Source'
   marketingsource-header-create: 'Create marketing source'
   marketingsource-header-delete: 'Delete Marketing Source'
@@ -27,6 +33,8 @@ en:
   crud-table-pagination-text-showing: 'Showing'
   crud-table-pagination-text-results: 'results from'
   crud-table-pagination-test-displaying: 'Rows per page'
+  crud-table-no-search-results: 'No results found'
+  crud-table-try-adjust: 'Try adjusting your search to find what you’re looking for'
 
   add-button-filter: 'Filter'
   add-button-filter-header-text-filter: 'Filter by'
