--- a/libs/i18n/locales/fr.yml
+++ b/libs/i18n/locales/fr.yml
@@ -1,9 +1,15 @@
 fr:
   marketingsource-header-create.translation: 'Créer une source'
   marketingsource-title: 'Sources de marketing'
-  marketingsource-name-textfield: 'Nom'
+  marketingsource-title-short: 'Source'
   marketingsource-status-field: 'Statut'
-  marketingsource-name-placeholder: 'Facebook'
+  marketingsource-name: 'Nom'
+  marketingsource-name-lower: 'nom'
+  marketingsource-name-placeholder: 'par exemple. Facebook'
+  marketingsource-name-tooltip: 'Un nom convivial pour ce nom, par exemple. Facebook'
+  marketingsource-name-description: 'Un nom convivial'
+  marketingsource-name-full: 'Nom familier'
+  marketingsource-name-full-lower: 'nom familier'
   marketingsource-header-edit: 'Modifier la source marketing'
   marketingsource-header-create: 'Créer une source marketing'
   marketingsource-header-delete: 'Supprimer la source marketing'
@@ -25,6 +31,8 @@ fr:
   crud-table-pagination-text-showing: 'Montrant'
   crud-table-pagination-text-results: 'résultats de'
   crud-table-pagination-test-displaying: 'Lignes par page'
+  crud-table-no-search-results: 'Aucun résultat trouvé'
+  crud-table-try-adjust: 'Essayez d`ajuster votre recherche pour trouver ce que vous recherchez'
   search-header-placehodlder: 'Search clients or leads. FR'
 
   add-button-filter: 'Filtre'
