--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -173,10 +173,10 @@ en:
     ui.report-help-sidebar.kpis-care-factor-content: ui.report-help-sidebar.kpis-care-factor-content-en
     ui.report-help-sidebar.kpis-vouchers-title: Vouchers
     ui.report-help-sidebar.kpis-vouchers-content: ui.report-help-sidebar.kpis-vouchers-content_en
-    marketingsource-title-short: Source
-    marketingsource-status-field: Status
-    marketingsource-name: Name
-    marketingsource-name-lower: name
+    marketingsource-title-short: 'Source'
+    marketingsource-status-field: 'Status'
+    marketingsource-name: 'Name'
+    marketingsource-name-lower: 'name'
     marketingsource-name-tooltip: 'A friendly name for this name, eg. Facebook'
     marketingsource-name-description: 'A friendly name'
     marketingsource-name-full: 'Friendly Name'
