did the changes as per comment

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -6,6 +6,7 @@ en:
     marketingsource-header-edit: 'Edit Marketing Source'
     settings-header: 'Settings'
     settings-performance-save: 'Save Changes'
+    settings-performance-tab-header-description: 'Lorem ipsum carrots, enhanced undergraduate developer, but they do occaecat time and vitality.'
     settings-performance-tab-header1: 'Review Schedule'
     settings-performance-tab-header2: 'Assessment'
     settings-performance-tab-header3: 'People'
