Added language keys in setup settings loyalty page

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -991,6 +991,10 @@ en:
     setup.drugs.modal.delete.button: 'Yes, Delete'
     setup.drugs.modal.delete.message: '{{what}} will be deleted. This action is irreversable'
     setup.settings.loyalty.title: 'Loyalty settings'
+    setup.settings.loyalty.general.dropdown.15minutes: '15 Minutes'
+    setup.settings.loyalty.general.dropdown.30minutes: '30 Minutes'
+    setup.settings.loyalty.general.dropdown.45minutes: '45 Minutes'
+    setup.settings.loyalty.general.point.value: '13.45'
     setup.settings.loyalty.description: 'Configure how much each of your loyalty points are worth to your clients, as well as deciding if they are to be displayed on the receipt.'
     setup.settings.loyalty.savechanges: 'Save Changes'
     setup.settings.loyalty.showonreceipt.validate.required: 'Show on receipt Value is required'
