Added language keys in setup settings referral page

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -1001,6 +1001,13 @@ en:
     setup.settings.loyalty.inputpoint.validate.number: 'You must specify a currency amount'
     setup.settings.loyalty.inputpoint.validate.required: 'Points Value is required'
     setup.settings.referral.title: 'Referral settings'
+    setup.settings.referral.expiry.value: '15'
+    setup.settings.referral.reward.value: 'Standard Referral Voucher £20.00'
+    setup.settings.referral.referee.reward.value: 'Standard Referral Voucher £20.00'
+    setup.settings.referral.options.none.value: 'None'
+    setup.settings.referral.options.voucher.value: 'Standard Referral Voucher £20.00'
+    setup.settings.referral.reward.options.none.value: 'None'
+    setup.settings.referral.reward.options.voucher.value: 'Standard Referral Voucher £20.00'
     setup.settings.referral.description: 'Manage settings around you referral rewards, the templates that are sent as well as the amounts.'
     setup.settings.referral.savechanges: 'Save Changes'
     setup.settings.referral.reward.validate.string: 'You must specify a reward'
