--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -990,6 +990,48 @@ en:
     setup.drugs.modal.delete.title: 'Delete'
     setup.drugs.modal.delete.button: 'Yes, Delete'
     setup.drugs.modal.delete.message: '{{what}} will be deleted. This action is irreversable'
+    setup.settings.pos.configuration.tab.items.general: 'General'
+    setup.settings.pos.configuration.tab.items.appearance: 'Appearance'
+    setup.settings.pos.configuration.point.settings.title: 'Point Of Sale Settings'
+    setup.settings.pos.configuration.point.settings.sub.title: 'Take control over which features are enabled on your point of sale screen.'
+    setup.settings.pos.configuration.point.settings.breadcrumb.setup: 'Setup'
+    setup.settings.pos.configuration.point.settings.breadcrumb.point.settings: 'Point Of Sale Settings'
+    setup.settings.pos.configuration.header: 'POS Configuration'
+    setup.settings.pos.configuration.description: 'Take control over which features are enabled on your point of sale screen.'
+    setup.settings.pos.configuration.save.btn: 'Save Changes'
+    setup.settings.pos.configuration.disable: 'Disable discount'
+    setup.settings.pos.configuration.calculate.discount: 'Calculate discount before VAT'
+    setup.settings.pos.configuration.force.discount: 'Force discount reason'
+    setup.settings.pos.configuration.lock.sale: 'Lock sale'
+    setup.settings.pos.configuration.prevent.invoice: 'Prevent invoice number editing'
+    setup.settings.pos.configuration.add.booking: 'Automatically add booking in calendar on new service added'
+    setup.settings.pos.configuration.appearance.service: 'Service'
+    setup.settings.pos.configuration.appearance.retail: 'Retail'
+    setup.settings.pos.configuration.appearance.packages: 'Packages'
+    setup.settings.pos.configuration.appearance.giftcards: 'Giftcards'
+    setup.settings.pos.configuration.appearance.accounts: 'Accounts'
+    setup.settings.pos.configuration.appearance.loyalty: 'Loyalty'
+    setup.settings.pos.configuration.dropdown.option.package.label: 'Package use by date'
+    setup.settings.pos.configuration.dropdown.option.package.value: '15 Minutes'
+    setup.settings.pos.configuration.dropdown.option.package.help.tooltip: 'Help tooltip'
+    setup.settings.pos.configuration.dropdown.option.package.option.15minutes: '15 Minutes'
+    setup.settings.pos.configuration.dropdown.option.package.option.30minutes: '30 Minutes'
+    setup.settings.pos.configuration.dropdown.option.package.option.45minutes: '45 Minutes'
+    setup.settings.pos.configuration.dropdown.option.cashup.mode.label: 'Default cashup mode'
+    setup.settings.pos.configuration.dropdown.option.cashup.mode.value: 'Non Blind'
+    setup.settings.pos.configuration.dropdown.option.cashup.mode.help.tooltip: 'Help tooltip'
+    setup.settings.pos.configuration.dropdown.option.cashup.mode.option.non.blind: 'Non Blind'
+    setup.settings.pos.configuration.dropdown.option.cashup.mode.option.blind: 'Blind'
+    setup.settings.pos.configuration.dropdown.option.stock.count.mode.label: 'Default stock count mode'
+    setup.settings.pos.configuration.dropdown.option.stock.count.mode.value: 'Non Blind'
+    setup.settings.pos.configuration.dropdown.option.stock.count.mode.help.tooltip: 'Help tooltip'
+    setup.settings.pos.configuration.dropdown.option.stock.count.mode.option.non.blind: 'Non Blind'
+    setup.settings.pos.configuration.dropdown.option.stock.count.mode.option.blind: 'Blind'
+    setup.settings.pos.configuration.dropdown.option.payment.type.mode.label: 'Default payment type'
+    setup.settings.pos.configuration.dropdown.option.payment.type.mode.value: 'Card'
+    setup.settings.pos.configuration.dropdown.option.payment.type.mode.help.tooltip: 'Help tooltip'
+    setup.settings.pos.configuration.dropdown.option.payment.type.mode.option.card: 'Card'
+    setup.settings.pos.configuration.dropdown.option.payment.type.mode.option.net.banking: 'Net Banking'
     setup.settings.loyalty.title: 'Loyalty settings'
     setup.settings.loyalty.general.dropdown.15minutes: '15 Minutes'
     setup.settings.loyalty.general.dropdown.30minutes: '30 Minutes'
