Show on receipt dropdown changes

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -1033,9 +1033,8 @@ en:
     setup.settings.pos.configuration.dropdown.option.payment.type.mode.option.card: 'Card'
     setup.settings.pos.configuration.dropdown.option.payment.type.mode.option.net.banking: 'Net Banking'
     setup.settings.loyalty.title: 'Loyalty settings'
-    setup.settings.loyalty.general.dropdown.15minutes: '15 Minutes'
-    setup.settings.loyalty.general.dropdown.30minutes: '30 Minutes'
-    setup.settings.loyalty.general.dropdown.45minutes: '45 Minutes'
+    setup.settings.loyalty.general.dropdown.yes: 'Yes'
+    setup.settings.loyalty.general.dropdown.no: 'No'
     setup.settings.loyalty.general.point.value: '13.45'
     setup.settings.loyalty.description: 'Configure how much each of your loyalty points are worth to your clients, as well as deciding if they are to be displayed on the receipt.'
     setup.settings.loyalty.savechanges: 'Save Changes'
