Senders page UI changes

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -1018,6 +1018,12 @@ en:
     setup.senders.filter: 'Filter'
     setup.senders.default: 'Default'
     setup.senders.create: 'Create a sender'
+    setup.senders.type.email: 'email'
+    setup.senders.type.sms: 'sms'
+    setup.senders.type.from.name.clinic: 'Clinic Bookings'
+    setup.senders.type.from.email.clinic: 'william@pabau.com'
+    setup.senders.type.from.name.clinic.helth: 'The Health Clinic'
+    setup.senders.type.from.name.clinic.surgical: 'Surgical Clinic'
     setup.senders.create.validate.type.required: 'Sender type is required'
     setup.senders.create.validate.fromname.required: 'From name is required'
     setup.senders.create.validate.fromemail.email: 'Invalid email'
@@ -1027,6 +1033,8 @@ en:
     setup.senders.create.form.field.sms: 'SMS'
     setup.senders.create.form.field.sender: 'Sender'
     setup.senders.create.form.field.fromname: 'From name'
+    setup.senders.create.form.field.fromname.sms.max.error: 'From name max chars should be 11'
+    setup.senders.create.form.field.fromname.email.max.error: 'From name max chars should be 50'
     setup.senders.create.form.field.fromname.placeholder: 'Enter name'
     setup.senders.create.form.field.defaultsender: 'Default Sender'
     setup.senders.create.form.field.enablereplies: 'Enable Replies'
