fixed translation and missing layout init

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -1032,6 +1032,9 @@ en:
     setup.settings.pos.configuration.dropdown.option.payment.type.mode.help.tooltip: 'Help tooltip'
     setup.settings.pos.configuration.dropdown.option.payment.type.mode.option.card: 'Card'
     setup.settings.pos.configuration.dropdown.option.payment.type.mode.option.net.banking: 'Net Banking'
+    setup.settings.pos.configuration.tab.general.description: 'Choose to disable particular features such as the ability to over-ride prices and more.'
+    setup.settings.pos.configuration.tab.general.tooltip: 'Help tooltip'
+    setup.settings.pos.configuration.tab.appearance.description: 'Choose to hide specific features from the point of sale. Don’t sell gift cards? -No problem, just go ahead and switch it off..'
     setup.settings.loyalty.title: 'Loyalty settings'
     setup.settings.loyalty.general.dropdown.yes: 'Yes'
     setup.settings.loyalty.general.dropdown.no: 'No'
